# jvm

./: .gitignore  AttributeInfo.cpp  AttributeInfo.h  CMakeLists.txt  ClassFile.cpp  ClassFile.h  ClassPath.cpp  ClassPath.h  ClassReader.cpp  ClassReader.h  ConstantInfo.cpp  ConstantInfo.h  ConstantPool.cpp  ConstantPool.h  Entry.cpp  Entry.h  FieldInfo.cpp  FieldInfo.h  Interperter.cpp  Interperter.h  JVM.cpp  JVM.h  MainParamater.cpp  MainParamater.h  MemberInfo.cpp  MemberInfo.h  common.h  main.cpp
attribute/: AttributeInfo.cpp  AttributeInfo.h  CodeAttribute.cpp  CodeAttribute.h  ConstantValueAttribute.cpp  ConstantValueAttribute.h  ExceptionAttribute.cpp  ExceptionAttribute.h  LineNumberAttribute.cpp  LineNumberAttribute.h  LocalVariableTableAttribute.cpp  LocalVariableTableAttribute.h  SourceFileAttribute.cpp  SourceFileAttribute.h  UnparsedAttribute.cpp  UnparsedAttribute.h
classfile/: ClassFile.cpp  ClassFile.h  ClassReader.cpp  ClassReader.h  ConstantClassInfo.cpp  ConstantClassInfo.h  ConstantDoubleInfo.cpp  ConstantDoubleInfo.h  ConstantFactory.cpp  ConstantFactory.h  ConstantFieldRefInfo.cpp  ConstantFieldRefInfo.h  ConstantFloatInfo.cpp  ConstantFloatInfo.h  ConstantInfo.cpp  ConstantInfo.h  ConstantIntegerInfo.cpp  ConstantIntegerInfo.h  ConstantInvokeDynamic.cpp  ConstantInvokeDynamic.h  ConstantLongInfo.cpp  ConstantLongInfo.h  ConstantMemberInfo.cpp  ConstantMemberInfo.h  ConstantMethodInfo.cpp  ConstantMethodInfo.h  ConstantNameAndTypeInfo.cpp  ConstantNameAndTypeInfo.h  ConstantNumeric.cpp  ConstantNumeric.h  ConstantPool.cpp  ConstantPool.h  ConstantStringInfo.cpp  ConstantStringInfo.h  ConstantUtf8Info.cpp  ConstantUtf8Info.h  Constants.cpp  Constants.h  FieldInfo.h  MemberInfo.cpp  (+1 more)
classfile/attribute/: AttributeInfo.cpp  AttributeInfo.h  BootstrapMethodsAttribute.cpp  BootstrapMethodsAttribute.h  CodeAttribute.cpp  CodeAttribute.h  ConstantValueAttribute.cpp  ConstantValueAttribute.h  EnclosingMethodAttribute.cpp  EnclosingMethodAttribute.h  ExceptionAttribute.cpp  ExceptionAttribute.h  InnerClassesAttribute.cpp  InnerClassesAttribute.h  LineNumberAttribute.cpp  LineNumberAttribute.h  LocalVariableTableAttribute.cpp  LocalVariableTableAttribute.h  SignatureAttribute.cpp  SignatureAttribute.h  SourceFileAttribute.cpp  SourceFileAttribute.h  UnparsedAttribute.cpp  UnparsedAttribute.h
classpath/: ClassPath.cpp  ClassPath.h  CompositeEntry.cpp  CompositeEntry.h  DirEntry.cpp  DirEntry.h  Entry.cpp  Entry.h  WildcardEntry.cpp  WildcardEntry.h  ZipEntry.cpp  ZipEntry.h
common/: BytesUtils.cpp  BytesUtils.h  DataUtils.cpp  DataUtils.h  SlotArray.cpp  SlotArray.h  StrUtils.cpp  StrUtils.h  ZipUtils.cpp  ZipUtils.h  type.h
constant/: ConstantClassInfo.cpp  ConstantClassInfo.h  ConstantDoubleInfo.cpp  ConstantDoubleInfo.h  ConstantFieldRefInfo.cpp  ConstantFieldRefInfo.h  ConstantFloatInfo.cpp  ConstantFloatInfo.h  ConstantIntegerInfo.cpp  ConstantIntegerInfo.h  ConstantLongInfo.cpp  ConstantLongInfo.h  ConstantMemberInfo.cpp  ConstantMemberInfo.h  ConstantMethodInfo.cpp  ConstantMethodInfo.h  ConstantNameAndTypeInfo.cpp  ConstantNameAndTypeInfo.h  ConstantStringInfo.cpp  ConstantStringInfo.h  ConstantUtf8Info.cpp  ConstantUtf8Info.h
instructions/: BytecodeReader.cpp  BytecodeReader.h  Constant.cpp  Constant.h  Factory.cpp  Factory.h  ILoad.cpp  ILoad.h  IPush.cpp  IPush.h  IStore.cpp  IStore.h  Instruction.cpp  Instruction.h
instructions/base/: BytecodeReader.cpp  BytecodeReader.h  Instruction.cpp  Instruction.h  MethodInvokeLogic.cpp  MethodInvokeLogic.h
instructions/comparisons/: DCMP.cpp  Dcmp.cpp  Dcmp.h  FCMP.cpp  FCMP.h  Fcmp.cpp  ICMP.cpp  IFCOND.cpp  IFCOND.h  IF_ACMP.cpp  IF_ACMP.h  IF_ICMP.cpp  IF_ICMP.h  Icmp.cpp  Icmp.h  Ifcond.cpp  LCMP.cpp  Lcmp.cpp  Lcmp.h
instructions/constants/: CONSTANT.cpp  CONSTANT.h  Constant.cpp  Constant.h  IPUSH.cpp  IPUSH.h  Ipush.cpp  Ipush.h  LDC.cpp  LDC.h  SIPUSH.cpp  SIPUSH.h
instructions/control/: GOTO.cpp  Goto.cpp  Goto.h  LOOKUP_SWITCH.cpp  LookupSwitch.cpp  LookupSwitch.h  RETURN.cpp  RETURN.h  TABLE_SWITCH.cpp  TableSwitch.cpp  TableSwitch.h
instructions/conversions/: D2X.cpp  D2X.h  D2x.cpp  F2X.cpp  F2X.h  F2x.cpp  I2X.cpp  I2X.h  I2x.cpp  L2X.cpp  L2x.cpp  L2x.h
instructions/extended/: GOTOW.cpp  GOTOW.h  GotoW.cpp  IFNONNULL.cpp  IFNULL.cpp  IFNonNull.cpp  IFNonNull.h  IFNull.cpp  IFNull.h  WIDE.cpp  WIDE.h  Wide.cpp
instructions/loads/: ALOAD.cpp  ALoad.cpp  ALoad.h  DLOAD.cpp  DLoad.cpp  DLoad.h  FLOAD.cpp  FLOAD.h  FLoad.cpp  ILOAD.cpp  ILoad.cpp  ILoad.h  LLOAD.cpp  LLoad.cpp  LLoad.h  XALOAD.cpp  XALOAD.h
instructions/math/: ADD.cpp  ADD.h  AND.cpp  Add.cpp  And.cpp  And.h  DIV.cpp  Div.cpp  Div.h  IINC.cpp  IINC.h  MUL.cpp  Mul.cpp  Mul.h  NEG.cpp  Neg.cpp  Neg.h  OR.cpp  OR.h  Or.cpp  REM.cpp  REM.h  Rem.cpp  SH.cpp  SH.h  SUB.cpp  SUB.h  Sh.cpp  Sub.cpp  XOR.cpp  Xor.cpp  Xor.h
instructions/references/: ANEW_ARRAY.cpp  ANEW_ARRAY.h  ARRAY_LENGTH.cpp  ARRAY_LENGTH.h  ATHROW.cpp  ATHROW.h  CHECK_CAST.cpp  CHECK_CAST.h  GET_FIELD.cpp  GET_FIELD.h  GET_STATIC.cpp  GET_STATIC.h  INSTANCEOF.cpp  INSTANCEOF.h  INSTANCE_OF.cpp  INSTANCE_OF.h  INVOKE_INTERFACE.cpp  INVOKE_INTERFACE.h  INVOKE_SPECIAL.cpp  INVOKE_SPECIAL.h  INVOKE_STATIC.cpp  INVOKE_STATIC.h  INVOKE_VIRTUAL.cpp  INVOKE_VIRTUAL.h  LDC.cpp  LDC.h  MULTI_ANEW_ARRAY.cpp  MULTI_ANEW_ARRAY.h  NEW.cpp  NEW.h  NEW_ARRAY.cpp  NEW_ARRAY.h  PUT_FIELD.cpp  PUT_FIELD.h  PUT_STATIC.cpp  PUT_STATIC.h
instructions/reserved/: INVOKE_NATIVE.cpp  INVOKE_NATIVE.h
instructions/stack/: DUP.cpp  Dup.cpp  Dup.h  Math.cpp  Math.h  POP.cpp  Pop.cpp  Pop.h  SWAP.cpp  Swap.cpp  Swap.h
instructions/stores/: ASTORE.cpp  (+16 more)
java_test/: BoxTest.java  BubbleSortTest.java  CloneTest.java  GaussTest.java  GetClassTest.java  InvokeDemo.java  ObjectTest.java  ParseIntTest.java  StringTest.java  SystemOutTest.java
libs/: ioapi.h
native/: Registry.cpp  Registry.h
runtime/: Frame.cpp  Frame.h  LocalVars.cpp  LocalVars.h  OperandStack.cpp  OperandStack.h  OperandStrack.cpp  OperandStrack.h  Stack.cpp  Stack.h  Strack.cpp  Strack.h  Thread.cpp  Thread.h
(+73 files in other folders)
